--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-appconf==1.0.2
 django-geoposition==0.3.0
 django-measurement==3.1.1
 djangorestframework==3.9.0
+psycopg2==2.7.6
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
