--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,13 @@ dj-database-url==0.5.0
 Django==2.1.3
 django-allauth==0.38.0
 django-appconf==1.0.2
+django-axes==4.4.2
+django-brutebuster==0.1.8
 django-cors-headers==2.4.0
 django-geoposition==0.3.0
 django-heroku==0.3.1
+django-ipware==2.1.0
+django-lockout==0.1.1
 django-measurement==3.1.1
 django-rest-auth==0.9.3
 djangorestframework==3.9.0
